# sensors_iced_app

./: Cargo.toml  README.md
src/: main.rs
