[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.6", features = ["smol"]}
log = "0.4.0"
env_logger = "0.9.0"
nats = "0.23.1"
serde = "1.0.152"
serde_json = "1.0.91"

